ammended the JSON code to be less stringified

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,9 @@
   font-size: var(--font-size-12);
   font-family: var(--font-family-code);
 }
+
+.api-input {
+  position:relative;
+  width: '420px';
+  display: flex;
+}
